syntax = "proto3";
package com.nony.test;


message Person {
    string firstName = 1;
    string lastName = 2;
}

message Student {
    string firstName = 1;
    string middleName = 2;
    string lastName = 3;
}